# Bebel19-UPSSITECH_3A_multithreading

./: CMakeLists.txt  LICENSE  README.md  benchmark_tp2.py  boss.py  low_level.cpp  minion.py  proxy.py  queue_client.py  queue_manager.py  task.py  test_task.py  test_task_json.py
.github/workflows/: ci.yml
